feat: Adicionando o buttom do google e corrigindo as bordas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="password_keeper">Password Keeper</string>
     <string name="subtitle">An easy way for you to remember =)</string>
     <string name="image_description">Ícone de uma chave, representando ícone do app</string>
+    <string name="sign_in_with_google">Sign in with google</string>
 </resources>
