--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="types">Types</string>
     <string name="favorite">Favorite</string>
     <string name="search">Search</string>
-    <string name="message">Most things are not as bad as you think they are.</string>
+    <string name="message">Most things are not as bad as you think they are. Most things are not as bad as you think they are Most things are not as bad as you think they are</string>
     <string name="hello">Hello,</string>
     <string name="advice_of_moment">Advice of moment =)</string>
     <string name="cone_de_pesquisa">Ícone de pesquisa</string>
