--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="new_note">New note</string>
     <string name="settings">Settings</string>
     <string name="image_description_card_view_type">Imagem representando uma categoria de senhas</string>
+    <string name="message_loading">Wait a minute, we\'re getting a nice advice for you...</string>
+    <string name="no_message_found">Sorry, no message found!</string>
+    <string name="error_happend">Sorry, an error happend!</string>
 </resources>
