--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,8 @@
     <string name="new_note">New note</string>
     <string name="settings">Settings</string>
     <string name="image_description_card_view_type">Imagem representando uma categoria de senhas</string>
+    <string name="the_advice_above">The advice above has 12 words that can change your day. Try a new one!</string>
+    <string name="ask_for_advice">Ask for advice</string>
+    <string name="no_message_found">Sorry, no message found!</string>
+    <string name="error">Sorry, an error happend!</string>
 </resources>
