--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,6 @@
     <string name="types">Types</string>
     <string name="favorite">Favorite</string>
     <string name="search">Search</string>
-    <string name="message">Most things are not as bad as you think they are. Most things are not as bad as you think they are Most things are not as bad as you think they are</string>
     <string name="hello">Hello,</string>
     <string name="advice_of_moment">Advice of moment =)</string>
     <string name="icone_de_pesquisa">Ícone de pesquisa</string>
@@ -26,8 +25,9 @@
     <string name="new_note">New note</string>
     <string name="settings">Settings</string>
     <string name="image_description_card_view_type">Imagem representando uma categoria de senhas</string>
-    <string name="the_advice_above">The advice above has 12 words that can change your day. Try a new one!</string>
+    <string name="the_advice_above">The advice above has %1$d words that can change your day. Try a new one!</string>
     <string name="ask_for_advice">Ask for advice</string>
     <string name="no_message_found">Sorry, no message found!</string>
     <string name="error">Sorry, an error happend!</string>
+    <string name="message">&#160;&#160;&#160;ost things are not as bad as you think they are. Most things are not as bad as you think they are Most things are not as bad as you think they are</string>
 </resources>
