--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,8 @@
     <string name="email_field_is_empty">Email field is empty</string>
     <string name="invalid_email">Invalid email</string>
     <string name="password_field_is_empty">Password field is empty</string>
+    <string name="name_field_is_empty">Name field is empty</string>
+    <string name="password_weak">Password weak</string>
+    <string name="password_not_match">The passwords do not match</string>
+    <string name="email_already_exist">Email already exists</string>
 </resources>
