feat: criando loanding no botão signIn e fazendo correções de componentes não usados

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -52,4 +52,5 @@
     <string name="education">Educação</string>
     <string name="work">Trabalho</string>
     <string name="cards">Cartões</string>
+    <string name="please_wait">Aguarde...</string>
 </resources>
