--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="education">Education</string>
     <string name="work">Work</string>
     <string name="cards">Cards</string>
+    <string name="please_wait">Please wait...</string>
 </resources>
