feat: criando layout de novo cartão

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="advice_of_moment">Advice of moment =)</string>
     <string name="icone_de_pesquisa">Ícone de pesquisa</string>
     <string name="text_type">Streaming</string>
-    <string name="new_note">New note</string>
+    <string name="new_card">New Card</string>
     <string name="settings">Settings</string>
     <string name="image_description_card_view_type">Imagem representando uma categoria de senhas</string>
     <string name="the_advice_above">The advice above has %1$d words that can change your day. Try a new one!</string>
@@ -53,4 +53,5 @@
     <string name="work">Work</string>
     <string name="cards">Cards</string>
     <string name="please_wait">Please wait...</string>
+    <string name="home">Home</string>
 </resources>
