fix: refatorando funcionalidades para os metodos getFavorites e getCategoriesSize

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -15,7 +15,7 @@
     <string name="create_an_account">Criar conta</string>
     <string name="confirm_password">Confirmar senha</string>
     <string name="name">Primeiro nome/apelido aqui</string>
-    <string name="types">Categorias</string>
+    <string name="categories">Categorias</string>
     <string name="favorite">Favoritos</string>
     <string name="search">Pesquisar</string>
     <string name="hello">Olá,</string>
