--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -68,4 +68,5 @@
     <string name="text_no_favorite_yet">Continue a seguir os seus cartões favoritos, clicando em</string>
     <string name="no_cards_yet">Nenhum card ainda</string>
     <string name="card_view_description">Spotify</string>
+    <string name="no_favorite_yet">Nenhum favorito ainda</string>
 </resources>
