--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="text_no_favorite_yet">Keep tracking your favorite cards by clicking at</string>
     <string name="no_cards_yet">No cards yet</string>
     <string name="card_view_description">Spotify</string>
+    <string name="no_favorite_yet">No favorite yet</string>
 </resources>
