--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,10 @@
     <string name="no_cards_yet">No cards yet</string>
     <string name="card_view_description">Spotify</string>
     <string name="no_favorite_yet">No favorite yet</string>
+    <string name="category_not_selected">Category not selected</string>
+    <string name="description_is_empty">Description is empty</string>
+    <string name="sorry_something_went_wrong">Sorry, but something went wrong =/</string>
+    <string name="please_try_again_later">Please, try again later!!!</string>
+    <string name="data_stored_in_our_server">Data stored in our server</string>
+    <string name="one_more_data">One more data saved just waiting for you when you need it!!!</string>
 </resources>
