--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name="please_try_again_later">Please, try again later!!!</string>
     <string name="data_stored_in_our_server">Data stored in our server</string>
     <string name="one_more_data">One more data saved just waiting for you when you need it!!!</string>
+    <string name="view_all">View all</string>
 </resources>
