--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="ask_for_advice">Ask for advice</string>
     <string name="no_message_found">Sorry, no message found!</string>
     <string name="error">Sorry, an error happened!</string>
-    <string name="message">Most things are not as bad as you think they are. Most things are not as bad as you think they are Most things are not as bad as you think they are</string>
+    <string name="message">Most things are not as bad as you think they are. Most things are not as bad as you think they are Most things are not as bad as you think they are.dhsudhsaddhusaudhusaduhsauhsaudsauuhsaudhsadsauusduhsaduduahas</string>
     <string name="loading">Wait a minute, we\'re getting a nice one for you</string>
     <string name="email_or_password_wrong">Sorry, email or password is wrong!</string>
     <string name="email_field_is_empty">Email field is empty</string>
