--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="name">Your first name/nickname here</string>
     <string name="categories">Categories</string>
     <string name="favorite">Favorite</string>
-    <string name="search">Search</string>
+    <string name="search">Search for description</string>
     <string name="hello">Hello,</string>
     <string name="advice_of_moment">Advice of moment =)</string>
     <string name="icone_de_pesquisa">Ícone de pesquisa</string>
