--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -87,4 +87,5 @@
     <string name="unknown_category">Categoria desconhecida</string>
     <string name="sort_by">Ordenar por:</string>
     <string name="date">Data</string>
+    <string name="edit">Editar</string>
 </resources>
